# reco-simulator

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
app/: app.py  get_dummy.py  get_score.py
app/static/: app.js  style.css
app/templates/: index.html
data/: preprocess.py  prompt.md  scores_Recruit_meta.json
