[project]
name = "reco-simulator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hideaki Takahashi", email = "ivorypawn0@gmail.com" }
]
dependencies = [
    "flask>=3.1.3",
    "pandas>=3.0.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.5.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reco_simulator"]
