[project]
name = "reco-simulator"
version = "0.1.0"
description = "推薦システムシミュレーター"
authors = [
    { name = "Hideaki Takahashi", email = "ivorypawn0@gmail.com" }
]
dependencies = [
    "flask>=3.1.3",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reco_simulator"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
]
